# cyber-query-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  SECURITY.md  config.json  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/docker-check-containers/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-python-core/: action.yml
.github/workflows/: build.yml  ci.yml  docker.yml
configuration/: config.json
cyber-query-ai-frontend/: README.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tsconfig.json
cyber-query-ai-frontend/public/: manifest.json
cyber-query-ai-frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
cyber-query-ai-frontend/src/app/about/: page.tsx
cyber-query-ai-frontend/src/app/assistant/: page.tsx
cyber-query-ai-frontend/src/app/code-explanation/: page.tsx
cyber-query-ai-frontend/src/app/code-generation/: page.tsx
cyber-query-ai-frontend/src/app/command-explanation/: page.tsx
cyber-query-ai-frontend/src/app/command-generation/: page.tsx
cyber-query-ai-frontend/src/app/exploit-search/: page.tsx
cyber-query-ai-frontend/src/app/login/: page.tsx
cyber-query-ai-frontend/src/app/script-explanation/: page.tsx
cyber-query-ai-frontend/src/components/: ChatMessage.tsx  ChatWindow.tsx  CommandBox.tsx  ErrorNotification.tsx  ExplanationBox.tsx  ExploitList.tsx  Footer.tsx  HealthIndicator.tsx  LanguageSelector.tsx  Navigation.tsx  PromptInput.tsx  ScriptBox.tsx  TextInput.tsx
cyber-query-ai-frontend/src/contexts/: AuthContext.tsx
cyber-query-ai-frontend/src/lib/: api.ts  auth.ts  sanitization.ts  types.ts  useHealthStatus.ts  version.ts
cyber_query_ai/: api.py  chatbot.py  config.py  formatters.py  helpers.py  main.py  models.py  rag.py  server.py
docs/: API.md  ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  RELEASE-NOTES.md  SMG.md  UI-DESIGN.md  WORKFLOWS.md
grafana/: README.md
grafana/dashboards/: authentication-metrics.json  health-metrics.json  rate-limiting-metrics.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus-datasource.yml
prometheus/: prometheus.yml
rag_data/: dirb_man.txt  dirbuster_help.txt  ffuf_man.txt  gobuster_man.txt  hashcat_man.txt  hashid_man.txt  hydra_man.txt  john_man.txt  medusa_man.txt  msfvenom_man.txt  ncrack_man.txt  netcat_man.txt  nikto_man.txt  nmap_man.txt  recon-ng_man.txt  sqlmap_man.txt  tools.json  unicornscan_man.txt  wfuzz_man.txt  whatweb_man.txt  zenmap_man.txt
release/: install_cyber_query_ai.bat  install_cyber_query_ai.sh  readme.txt
tests/: conftest.py  test_api.py  test_chatbot.py  test_config.py  test_formatters.py  test_helpers.py  test_main.py  test_models.py  test_rag.py  test_server.py
(+19 files in other folders)
